# Grapher

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  CPG.cpp  CPG.h  LICENSE  PIDController.cpp  PIDController.h  README.md  common.cpp  common.h  doxygen.config
Data/: FF.csv  posF.csv  posF2.csv  posF3.csv  ss100.csv  ss300.csv  tauR0.0005W0.005.csv  tauR0.005W0.0005.csv  tauR0.005W0.005.csv  tauR0.005W0.05.csv  tauR0.005W0.5.csv  tauR0.005W0.csv  tauR0.05W0.005.csv  tauR0.5W0.005.csv  tauR0W0.005.csv  velF.csv  velF2.csv  velF3.csv  velF4.csv
Documentation/html/: _c_p_g_8h_source.html  _p_i_d_controller_8h_source.html  _robot___v_r_e_p_8h_source.html  _simulation_8h_source.html  annotated.html  class_c_p_g-members.html  class_c_p_g.html  class_p_i_d_controller-members.html  class_p_i_d_controller.html  class_robot___v_r_e_p-members.html  class_robot___v_r_e_p.html  class_simulation-members.html  class_simulation.html  classes.html  common_8h_source.html  files.html  functions.html  functions_func.html  functions_rela.html  index.html  md__r_e_a_d_m_e.html  menudata.js  pages.html
Documentation/html/search/: all_0.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  classes_0.js  classes_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  related_0.js  searchdata.js
Documentation/latex/: annotated.tex  class_c_p_g.tex  class_p_i_d_controller.tex  class_robot___v_r_e_p.tex  class_simulation.tex  md__r_e_a_d_m_e.tex  refman.aux  refman.idx  refman.ilg  refman.ind  refman.tex  refman.toc
Documentation/papers/: CPG_simulation.aux  CPG_simulation.tex  oscillator_simulation.aux  oscillator_simulation.tex
Documentation/papers/frontiers-hrhs/: biblio.bib  frontiers_HRHS.aux  frontiers_HRHS.tex
Graphical/: Grapher.cpp  Grapher.h  Grapher.h~  Shader.cpp  Shader.h  main.cpp  main.cpp~
Graphical/shaders/: shader.frag  shader.vs
Handshaking.xcodeproj/: project.pbxproj
Handshaking.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Handshaking.xcodeproj/project.xcworkspace/xcuserdata/Melanie.xcuserdatad/: UserInterfaceState.xcuserstate
Handshaking.xcodeproj/xcuserdata/Melanie.xcuserdatad/xcschemes/: FrequencePropre.xcscheme  Graphical.xcscheme  Handshaking.xcscheme  Handshaking2.xcscheme  Handshaking2b.xcscheme  Waving.xcscheme  xcschememanagement.plist
Robot/: Robot.cpp  Robot.h  Robot_VREP.cpp  Robot_VREP.h
Simulation/: Reach.cpp  Reach.h  Simulation.cpp  Simulation.h  Simulation2.cpp  Simulation2.h
V-REP/: mico.ttt  mico2.ttt
lib-cpg/: Integrator.cpp  Integrator.h
src/: Grapher.cpp  Grapher.cpp~  Grapher.h  Grapher.h~  Shader.cpp  Shader.h  main.cpp
src/shaders/: shader.frag  shader.vs
